[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/JetBrainsMono-2.304/fonts/ttf/JetBrainsMono-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/TitleScreen_buttonpressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Interface/TitleScreen_button.tres" type="StyleBox" id=3]
[ext_resource path="res://Interface/TitleScreen_buttonhover.tres" type="StyleBox" id=4]
[ext_resource path="res://Interface/MenuButton.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[node name="MenuButton" type="Button"]
margin_right = 510.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Button Text"
script = ExtResource( 5 )

[connection signal="button_down" from="." to="." method="_on_MenuButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_MenuButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_MenuButton_pressed"]
